internal/xds/translator/testdata/out/xds-ir/ext-proc-accesslog-nack-protection.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - example.com
    name: envoy-gateway/gateway-1/http/example_com
    routes:
    - match:
        prefix: /
      name: httproute/default/httproute-1/rule/0/match/0/example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/https
  virtualHosts:
  - domains:
    - secure.example.com
    name: envoy-gateway/gateway-1/https/secure_example_com
    routes:
    - match:
        prefix: /
      name: httproute/default/httproute-2/rule/0/match/0/secure_example_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
